--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
+  background: rgb(255, 204, 255);
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
 }
-
-.App-link {
-  color: #61dafb;
+img {
+  display: block;
+  cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  margin: auto;
+  width: 100%;
+  max-width: 540px;
+}
+.container .selected {
+  width: 400px;
+  height: 400px;
+  border: 3px solid papayawhip;
+  margin: 0 auto;
+}
+.imgContainer {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  column-gap: 20px;
+}
+.App .imgContainer img {
+  width: 100px;
+  height: 100px;
+  margin: 5px 0;
 }
